Fixed: drop-shadow on mobile, and flag stretching

--- a/src/App/Flag/Flag.module.css
+++ b/src/App/Flag/Flag.module.css
@@ -6,10 +6,11 @@
 }
 
 .image {
+  object-fit: contain;
   max-width: 100%;
   max-height: 100%;
-  /* box-shadow: 0px 0px 50px 10px; */
   filter: drop-shadow(0 0 50px black);
+  transform: translate3d(0,0,0); /* DO NOT REMOVE! This changes nothing but it forces mobile devices to use their GPU (ensures that CSS such as drop-shadow is rendered correctly)*/
 }
 
 @media (max-width: 480px) {
